security service endpoints
